\name{NEWS}
\title{News for package \pkg{GeneNMF}}


\section{Version 0.4.0}{
\itemize{
    \item First stable version
}}