@@ -243,9 +243,12 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 <p>Currently available GeneNMF vignettes:</p>
 <ol style="list-style-type: decimal">
-<li>A demo of the <strong>basic functionalities</strong> of GeneNMF on
-PBMC scRNA-seq data - <a href="https://carmonalab.github.io/GeneNMF.demo/NMF_demo_PBMC.html">GeneNMF
-basics</a>.</li>
+<li><p>A demo of the <strong>basic functionalities</strong> of GeneNMF
+on PBMC scRNA-seq data - <a href="https://carmonalab.github.io/GeneNMF.demo/NMF_demo_PBMC.html">GeneNMF
+basics</a></p></li>
+<li><p>GeneNMF on cancer cells to characterize <strong>intratumor
+heterogeneity</strong> - <a href="https://carmonalab.github.io/NMF_demo_cancercells.html">Cancer
+metaprograms</a></p></li>
 </ol>
 <p>More information available at the <a href="https://github.com/carmonalab/GeneNMF">GeneNMF repository</a> and
 <a href="https://github.com/carmonalab/GeneNMF.demo">GeneNMF demo
